<resources>
    <string name="app_name">Daily</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_up">Dont have an account? <font color='#FF5E3A'>Signup</font></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in">Already have an account? <font color='#FF5E3A'>Log In</font></string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="empty_password">Please enter a password</string>
    <string name="password_not_match">Password doesnt match , Enter the correct password</string>
    <string name="action_done">Done</string>
    <string name="name">Name</string>
    <string name="user_details_help_text">Hi! What should we call you?</string>
    <string name="invalid_name">Please enter a name</string>
    <string name="title_today">Today</string>
    <string name="goals">Goals</string>
    <string name="title_settings">Settings</string>
    <string name="welcome">Welcome,</string>
    <string name="goal_name">Name</string>
    <string name="goal_description">Description</string>
    <string name="add_goal">Add Goal</string>
    <string name="due_date">Due Date</string>
    <string name="empty_goal_name">Please enter a name</string>
    <string name="empty_goal_description">Please enter a brief description</string>
    <string name="empty_due_date">Please select due date</string>
    <string name="error_adding_goal">Error saving goal , Please try again</string>
    <string name="due_on">Due on : %s</string>
    <string name="tasks_completed">Tasks Completed</string>
    <string name="number_of_tasks">%s / %s</string>
    <string name="tasks_completed_newline">Tasks\nCompleted</string>
    <string name="total_tasks_new_line">Total\nTasks</string>
    <string name="days_left_newline">Days\nLeft</string>
    <string name="add_your_tasks">Add Your Tasks</string>
    <string name="my_goal">My Goals :</string>
    <string name="add_task">Add Task</string>
    <string name="goal">Goal :</string>
    <string name="empty_task_name">Please choose a task name</string>
    <string name="empty_task_description">Please enter some description about the task</string>
    <string name="days_remaining">%s days remaining</string>
    <string name="today">Today</string>
    <string name="tommorow">Tommorow</string>
    <string name="your_tasks">Your Tasks</string>
    <string name="completed">Completed</string>
    <string name="in_progress">In Progress</string>
    <string name="pomardo_edu_text">Use the Pomodoro technique to keep track of time you spend on your tasks</string>
    <string name="action_complete">Complete</string>
    <string name="title_ideas">Ideas</string>
    <string name="timer_mins">25:00</string>
    <string name="thoughts">Thoughts</string>
    <string name="mit_tutorial_text">At the beginning of each day pick up two to three tasks from your goals. Choose the tasks that would have the biggest impact on the way of achieving goals</string>
    <string name="long_short_goal_tutorial">Long-term goals can be anything ranging from a year to ten or even twenty years. They may be vague . On the other hand, the short-term goals can range from weeks and months.</string>
    <string name="goal_type">Goal Type</string>
    <string name="long_term">Long Term</string>
    <string name="short_term">Short Term</string>
    <string name="error_adding_mit">Oops ! Something went wrong , try again later</string>
    <string name="choose_mit">Choose your most important tasks</string>
    <string name="complete_task">Complete Task</string>
    <string name="complete_task_user_prompt">Are you sure you want to complete this task?</string>
    <string name="my_thoughts">My Thoughts</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="empty_note">Please enter title and contents for the note</string>
    <string name="time_ago">%s ago</string>
    <string name="label">label</string>
    <string name="color">color</string>
    <string name="enter_label_name">Enter Label name</string>
    <string name="create_label">Create Label "%s"</string>
    <string name="add_label">Add Label</string>
    <string name="color_picker_default_title">Color Picker</string>
    <string name="color_swatch_description">Description</string>
    <string name="color_swatch_description_selected">Selected</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="personal">Personal</string>
    <string name="career">Career</string>
    <string name="finance">Finance</string>
    <string name="goal_tut">The first aspect of task management is describing your tasks in detail, so that you could evaluate them just by looking at their parameters.</string>
    <string name="next_screen">Next</string>
    <string name="goal_date_tut">Deadlines are important for helping you achieve both large and small goals.</string>
    <string name="choose_target_date">Choose a target day</string>
    <string name="goal_details">Goal Details</string>
    <string name="choose_goal_type">Choose Goal Type</string>
    <string name="choose_category">Choose a category</string>
    <string name="done">Done</string>
    <string name="description">Description:</string>
    <string name="choose_color">Choose color</string>
    <string name="edit">Edit</string>
    <string name="start_new_timer">Start new timer</string>
    <string name="start_new_timer_message">There is a timer running for another task , Do you want to cancel the old timer</string>
    <string name="save_session">Save Session</string>
    <string name="save_session_message">Do you want to save the current session?</string>
    <string name="duration">Duration</string>
    <string name="session_name">Session name</string>
    <string name="session_description">What did you work in this session</string>
    <string name="add_session">Add Session</string>
    <string name="invalid_session_name">Please enter a session name</string>
    <string name="invalid_session_description">Please enter a description of the work done in this session</string>
    <string name="days_left">%s \nDays\nLeft</string>
    <string name="add_mit_tut">There are no tasks left for today\nAdd new tasks</string>
    <string name="add">Add</string>
    <string name="sessions">Sessions :</string>
    <string name="myCalendar">Calendar</string>
</resources>
