<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GoalDetailsFragment">


    <TextView
        android:id="@+id/textView17"
        style="@style/fontBookAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/goal_tut"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/goalNametextInputLayout"
        style="@style/boxedEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/goal_name"
        app:layout_constraintBottom_toTopOf="@+id/goalDescriptionTextInputLayout"
        app:layout_constraintEnd_toEndOf="@+id/textView17"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/goalDescriptionTextInputLayout"
        style="@style/boxedEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/goal_description"
        app:layout_constraintBottom_toTopOf="@+id/goal_details_next_button"
        app:layout_constraintEnd_toEndOf="@+id/goalNametextInputLayout"
        app:layout_constraintStart_toStartOf="@+id/goalNametextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/goalNametextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:imeOptions="actionNext"
            android:maxLines="4"
            android:minLines="4" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/goal_details_next_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next_screen"
        android:textColor="@color/white"
        style="@style/fontHeavyAppearance"
        android:textSize="14sp"
        android:background="@drawable/blue_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>