<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.AddTaskFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/today_task_name_text_input_layout"
            style="@style/boxedEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/goal_name"
            app:layout_constraintBottom_toTopOf="@+id/today_task_description_text_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.060000002"
            app:layout_constraintVertical_chainStyle="packed">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/today_task_description_text_input_layout"
            style="@style/boxedEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/goal_description"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/today_task_name_text_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/today_task_name_text_input_layout">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:imeOptions="actionNext"
                android:maxLines="4"
                android:minLines="3" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView3"
            style="@style/headingTextApperance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/goal"
            app:layout_constraintBottom_toTopOf="@+id/add_task_coordinator_layout"
            app:layout_constraintStart_toStartOf="@+id/today_task_description_text_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/today_task_description_text_input_layout" />

        <Spinner
            android:id="@+id/goal_name_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/medium_gray"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/add_task_coordinator_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ProgressBar
                android:id="@+id/add_today_task_progressbar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:visibility="gone" />

            <Button
                android:id="@+id/add_today_task_button"
                style="@style/signInButton"
                android:layout_width="match_parent"
                android:text="@string/add_task" />
        </android.support.design.widget.CoordinatorLayout>


    </android.support.constraint.ConstraintLayout>

</ScrollView>

