<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TaskDetailsFragment">


    <TextView
        android:id="@+id/task_name_text_view"
        style="@style/headingTextApperance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/description"
        android:textAllCaps="true"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/task_description_tet_view"
        style="@style/smallHeadingTextApperance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:textColor="@color/medium_gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/task_remaining_days_text_view"
        app:layout_constraintStart_toStartOf="@+id/task_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/task_name_text_view" />

    <TextView
        android:id="@+id/task_remaining_days_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/days_left_newline"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/task_description_tet_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/task_name_text_view" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/session_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/remaining_days_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="task_remaining_days_text_view" />

    <TextView
        android:id="@+id/textView12"
        style="@style/headingTextApperance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sessions"
        android:textAllCaps="true"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/task_description_tet_view"
        app:layout_constraintTop_toBottomOf="@+id/task_description_tet_view" />

    <Button
        android:id="@+id/add_session_button"
        style="@style/addButtonApperance"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView12" />


</androidx.constraintlayout.widget.ConstraintLayout>